--- a/vignettes/tidymass.Rmd
+++ b/vignettes/tidymass.Rmd
@@ -29,13 +29,13 @@ knitr::opts_chunk$set(
 
 # **Installation**
 
-You can install `tidymass` from [GitLab](https://gitlab.com/jaspershen/tidymass)
+You can install `tidymass` from [GitLab](https://gitlab.com/tidymass/tidymass)
 
 ``` {r,eval=FALSE,warning=FALSE, R.options="", message=FALSE, cache=TRUE, code_folding=TRUE}
 if(!require(remotes)){
 install.packages("remotes")
 }
-remotes::install_gitlab("jaspershen/tidymass")
+remotes::install_gitlab("tidymass/tidymass")
 ```
 
 or [GitHub](https://github.com/tidymass/tidymass)
